--- a/online-zoo/source/sass/blocks/testimonial-card.scss
+++ b/online-zoo/source/sass/blocks/testimonial-card.scss
@@ -115,7 +115,6 @@
     height: 104px;
     margin-right: 0;
     margin-bottom: 19px;
-    // overflow: hidden;
   }
   .testimonial-card__text {
     width: 100%;
@@ -123,6 +122,7 @@
   .testimonial-card blockquote {
     height: 84px;
     overflow: hidden;
+    margin: 11px 10px;
   }
 }
 
