--- a/online-zoo/source/sass/blocks/watch-your-favorite-animal.scss
+++ b/online-zoo/source/sass/blocks/watch-your-favorite-animal.scss
@@ -57,6 +57,7 @@
   .watch-your-favorite-animal {
     padding-bottom: 47px;
     background-image: url("../assets/img/giant-panda_small-desktop.jpg");
+    background-position: center -77px;
   }
   .watch-your-favorite-animal__wrapper {
     width: 100%;
@@ -82,10 +83,10 @@
 
 @media (max-width: $tablet-width) {
   .watch-your-favorite-animal {
-    background-image: url("../assets/img/giant-panda_tablet.jpg");
-    background-position: center -34px;
     padding-top: 33px;
-    padding-bottom: 76px;
+    padding-bottom: 67px;
+    background-image: url("../assets/img/giant-panda_tablet.jpg");
+    background-position: center -26px;
   }
   .watch-your-favorite-animal__wrapper {
     max-width: 600px;
@@ -111,8 +112,8 @@
 
 @media (max-width: $mobile-width) {
   .watch-your-favorite-animal {
-    background-image: url("../../assets/img/giant-panda_mobile.jpg");
-    background-size: cover;
+    background-image: url("../assets/img/giant-panda_mobile.jpg");
+    background-position: center -26px;
   }
   .watch-your-favorite-animal__wrapper {
     max-width: 300px;
